updated language middleware
