# cmd/go-api/go-api.go
@@ -63,11 +63,14 @@ func main() {
 				"xid": func(output logger.Buffer, _ *fiber.Ctx, data *logger.Data, _ string) (int, error) {
 					return output.WriteString(fmt.Sprintf("%6s", data.Pid))
 				},
+				"fullPath": func(output logger.Buffer, c *fiber.Ctx, _ *logger.Data, _ string) (int, error) {
+					return output.WriteString(c.OriginalURL())
+				},
 				"xip": func(output logger.Buffer, c *fiber.Ctx, _ *logger.Data, _ string) (int, error) {
 					return output.WriteString(fmt.Sprintf("%15s", c.IP()))
 				},
 			},
-			Format:     "[FIBER:${magenta}${xid}${reset}] ${time} | ${status} | ${latency} | ${xip} | ${method} ${path}?${queryParams} ${magenta}${error}${reset}\n",
+			Format:     "[FIBER:${magenta}${xid}${reset}] ${time} | ${status} | ${latency} | ${xip} | ${method} ${fullPath} ${yellow}\"${reqHeader:Accept-Language}\"${reset} ${magenta}${error}${reset}\n",
 			TimeFormat: "2006-01-02 15:04:05",
 			TimeZone:   time.Local.String(),
 		}))
@@ -82,14 +85,16 @@ func main() {
 			MaxAge:        1,
 		}),
 		language.New(language.Config{
-			KeyLookup:  "lang",
-			ContextKey: helper.LocalLang,
+			Languages:       strings.Split(os.Getenv("SYS_LANGUAGES"), ";"),
+			DefaultLanguage: os.Getenv("SYS_LANGUAGE"),
+			KeyLookup:       "Accept-Language",
+			ContextKey:      helper.LocalLang,
 		}),
 		limiter.New(limiter.Config{
 			Max:        100,
 			Expiration: time.Minute,
 			LimitReached: func(c *fiber.Ctx) error {
-				messages := c.Locals(helper.LocalLang).(*i18n.Translation)
+				messages := i18n.TranslationsI18n[c.Locals(helper.LocalLang).(string)]
 				return helper.NewHTTPResponse(c, fiber.StatusTooManyRequests, messages.ErrManyRequest)
 			},
 		}),
