# internal/api/middleware/language/langMiddleware.go
@@ -1,29 +1,44 @@
 package language
 
 import (
-	"os"
+	"fmt"
 	"slices"
 	"strings"
 
 	"github.com/gofiber/fiber/v2"
-
-	myi18n "github.com/raulaguila/go-api/internal/pkg/i18n"
 )
 
 type Config struct {
-	KeyLookup  string
-	ContextKey string
+	Languages       []string
+	DefaultLanguage string
+	KeyLookup       string
+	ContextKey      string
 }
 
 var defaultConfig = Config{
-	KeyLookup:  "lang",
-	ContextKey: "localLang",
+	Languages:       []string{"en-US", "pt-BR"},
+	DefaultLanguage: "en-US",
+	KeyLookup:       "Accept-Language",
+	ContextKey:      "localLang",
 }
 
 func New(config ...Config) fiber.Handler {
 	cfg := defaultConfig
 	if len(config) > 0 {
 		aux := config[0]
+		if aux.Languages != nil {
+			cfg.Languages = aux.Languages
+		}
+		for {
+			if index := slices.Index(cfg.Languages, ""); index != -1 {
+				cfg.Languages = append(cfg.Languages[:index], cfg.Languages[index+1:]...)
+				continue
+			}
+			break
+		}
+		if aux.DefaultLanguage != "" {
+			cfg.DefaultLanguage = aux.DefaultLanguage
+		}
 		if aux.KeyLookup != "" {
 			cfg.KeyLookup = aux.KeyLookup
 		}
@@ -33,13 +48,14 @@ func New(config ...Config) fiber.Handler {
 	}
 
 	return func(c *fiber.Ctx) error {
-		lang := strings.ToLower(c.Query(cfg.KeyLookup, os.Getenv("SYS_LANGUAGE")))
+		lang := strings.ToLower(c.Get(cfg.KeyLookup, cfg.DefaultLanguage))
+		c.Set(cfg.KeyLookup, fmt.Sprintf("%v;", strings.Join(cfg.Languages, ";")))
 
-		if !slices.Contains(strings.Split(os.Getenv("SYS_LANGUAGES"), ","), lang) {
-			lang = os.Getenv("SYS_LANGUAGE")
+		if !slices.Contains(cfg.Languages, lang) {
+			lang = cfg.DefaultLanguage
 		}
 
-		c.Locals(cfg.ContextKey, myi18n.TranslationsI18n[lang])
+		c.Locals(cfg.ContextKey, lang)
 		return c.Next()
 	}
 }
